--- a/jda_if_wmadapter/Test_Environment/jda_if_wmadapter.properties
+++ b/jda_if_wmadapter/Test_Environment/jda_if_wmadapter.properties
@@ -1,4 +1,4 @@
-﻿#
+#
 # ==========================================================================
 #                      Copyright 2020, Blue Yonder Group, Inc.
 #                                All Rights Reserved
@@ -19,7 +19,7 @@
 # count = n  (retry n number of times)
 
 # Message Broker and WMA queue configurations
-mbJmsComponent.queue.brokerURL=tcp://IN2NPDVDCSSV07:61616
+mbJmsComponent.queue.brokerURL=failover:(tcp://in2npdvdcssv07:61616)?maxReconnectAttempts=0
 mbJmsComponent.queue.user=admin
 mbJmsComponent.queue.maxConnections=30
 mbJmsComponent.queue.concurrentConsumers=30
@@ -30,7 +30,7 @@ mbJmsComponent.queue.maxRedelivery=0
 
 # WMA and WM Integrator queue configurations
 
-wmsComponent.queue.brokerURL=tcp://IN2NPDVDCSSV07:61616
+wmsComponent.queue.brokerURL=failover:(tcp://in2npdvdcssv07:61616)?maxReconnectAttempts=0
 wmsComponent.queue.user=admin
 wmsComponent.queue.maxConnections=30
 wmsComponent.queue.concurrentConsumers=30
@@ -69,14 +69,6 @@ srs.https.tls.trustStore.path=truststore.jks
 # In case of http, the value should be SRS_HTTP
 srs.protocol.config=SRS_HTTPS
 
-# VTS Properties
-server.vts.http.host=localhost
-server.vts.http.port=9841
-
-server.vts.https.host=localhost
-server.vts.https.port=9840
-server.vts.https.tls.trustStore.path=truststore.jks
-
 # Message Store
 messageStore.hostName=in2npdvdcssv07.dev.corp.local
 messageStore.port=9830
@@ -88,12 +80,14 @@ messageStore.serviceInstance=WMA
 messageStore.serviceHostName=server.host
 messageStore.serviceNamedVersion=WMA-2020.1.0
 messageStore.testMessage=false
-messageStore.failWhenDuplicate=true
+messageStore.failWhenDuplicate=false
 messageStore.https.tls.trustStore.path=truststore.jks
+messageStore.responseTimeout=60000
+messageStore.connectionIdleTimeout=60000
 
 # Message Replay
-messageStore.replayInboundMessage=false
-messageStore.replayBackendEvents=false
+messageStore.replayInboundMessage=true
+messageStore.replayBackendEvents=true
 messageStore.replayCount=2
 message.replay.path=/v2/replayEndpoint
 
@@ -119,7 +113,6 @@ message.outbound.native.default.messageReceiver=HOST.GLOBAL
 # Message Archiving
 message.archive.location=C:/wma-2020.1.0/messageArchive
 message.archive.enabled=true
-
 # Resource Path for codeMap
 message.codemap.resource.path=configurations/codeMappings.xml
 
@@ -157,7 +150,7 @@ generateReceipt=BOTH
 generateAcceptOrError=BOTH
 
 # Outbound Native to GS1 Conversion List
-outbound.request.native.gs1.list=PART_OUB_IFD,INVENTORY_RECEIPT_IFD,REVERSE_RECEIPT_IFD,INVENTORY_ADJUST,INVENTORY_ATTR_ADJUST,INVENTORY_STATUS_CHANGE_IFD,INVENTORY_CONSIGNMENT,TL_LPN_HOLD_HOST,BLIND_RECEIVING,INVENTORY_RECONCILIATION_IFD
+outbound.request.native.gs1.list=PART_OUB_IFD,INVENTORY_RECEIPT_IFD,REVERSE_RECEIPT_IFD,INVENTORY_ADJUST,INVENTORY_ATTR_ADJUST,INVENTORY_STATUS_CHANGE_IFD,INVENTORY_CONSIGNMENT,TL_LPN_HOLD_HOST,BLIND_RECEIVING
 
 # GS1 Message Models
 inventoryOperationMessage.model=#[['GS1_JDA 2020.1.0']]
@@ -174,7 +167,6 @@ partyMessage.model=#[['GS1_JDA 2017.2.0']]
 applicationReceiptAcknowledgementMessage.model=#[['GS1_JDA 2020.1.0','GS1_JDA 2019.1.0']]
 itemMessage.model=#[['GS1_JDA 2019.1.0','GS1_JDA 2019.1.1']]
 nativeMessage.model=#[['GS1_JDA 2019.1.1']]
-inventoryReportMessage.model=#[['GS1_JDA 2020.1.0']]
 
 # Code List Validation: IGNORE | WARNING | ERROR
 gs1.codeListValidation=WARNING
@@ -216,7 +208,6 @@ warehousingOutboundNotificationMessage.receivers=TMS.GLOBAL
 warehousingOutboundInstructionMessage.receivers=TMS.GLOBAL
 applicationReceiptAcknowledgementMessage.receivers=ACK.GLOBAL
 itemMessage.receivers=HOST.GLOBAL
-inventoryReportMessage.receivers=HOST.GLOBAL
 
 # Senders for each message
 itemMessage.senders=HOST.GLOBAL
