--- a/MessageBroker/Test_Environment/MessageBroker.yaml
+++ b/MessageBroker/Test_Environment/MessageBroker.yaml
@@ -13,6 +13,7 @@ mb:
     traceMessage:
       enabled: "false"
   gs1ack:
+    model: "bydm"
     generateAckError: "true"
     generateAckSuccess: "true"
     globalReceiverFlag: "true"
@@ -39,11 +40,12 @@ srsServer:
     host: "0.0.0.0"
     port: "9820"
     tls:
+      #context: "HTTPS_Request_SRS_TLS_Context"
+      context: "HTTPS_Request_SRS_TLS_Context_with_Trust"
       keyStore:
-        path: "keystore.jks"
-        key:
+        path: "https/keystore.jks"
       trustStore:
-        path: "truststore.jks"
+        path: "https/truststore.jks"
   http:
     host: "0.0.0.0"
     port: "9821"
