--- a/ServicesRegistry/Test_Environment/resources/configuration/service-definitions/WMA.yaml
+++ b/ServicesRegistry/Test_Environment/resources/configuration/service-definitions/WMA.yaml
@@ -37,6 +37,8 @@ inbound:
       flow: 'flow-in-item'
     - message: 'GS1:itemMessage:GS1_JDA 2019.1.1'
       flow: 'flow-in-item'
+    - message: 'GS1:itemMessage:GS1_JDA 2020.2.0'
+      flow: 'flow-in-item'
       
 outbound:
   responses:
