--- a/jda_if_wmadapter/Test_Environment/jda_if_wmadapter.properties
+++ b/jda_if_wmadapter/Test_Environment/jda_if_wmadapter.properties
@@ -150,7 +150,7 @@ generateReceipt=BOTH
 generateAcceptOrError=BOTH
 
 # Outbound Native to GS1 Conversion List
-outbound.request.native.gs1.list=PART_OUB_IFD,INVENTORY_RECEIPT_IFD,REVERSE_RECEIPT_IFD,INVENTORY_ADJUST,INVENTORY_ATTR_ADJUST,INVENTORY_STATUS_CHANGE_IFD,INVENTORY_CONSIGNMENT,TL_LPN_HOLD_HOST,BLIND_RECEIVING
+outbound.request.native.gs1.list=PART_OUB_IFD,INVENTORY_RECEIPT_IFD,REVERSE_RECEIPT_IFD,INVENTORY_ADJUST,INVENTORY_ATTR_ADJUST,INVENTORY_STATUS_CHANGE_IFD,INVENTORY_CONSIGNMENT,TL_LPN_HOLD_HOST,BLIND_RECEIVING,INVENTORY_RECONCILIATION_IFD
 
 # GS1 Message Models
 inventoryOperationMessage.model=#[['GS1_JDA 2020.1.0']]
@@ -165,8 +165,9 @@ transportPickUpDropOffConfirmationMessage.model=#[['GS1_JDA 2017.2.0']]
 locationMessage.model=#[['GS1_JDA 2017.2.0']]
 partyMessage.model=#[['GS1_JDA 2017.2.0']]
 applicationReceiptAcknowledgementMessage.model=#[['GS1_JDA 2020.1.0','GS1_JDA 2019.1.0']]
-itemMessage.model=#[['GS1_JDA 2019.1.0','GS1_JDA 2019.1.1']]
+itemMessage.model=#[['GS1_JDA 2019.1.0','GS1_JDA 2019.1.1','GS1_JDA 2020.2.0']]
 nativeMessage.model=#[['GS1_JDA 2019.1.1']]
+inventoryReportMessage.model=#[['GS1_JDA 2020.1.0']]
 
 # Code List Validation: IGNORE | WARNING | ERROR
 gs1.codeListValidation=WARNING
@@ -208,9 +209,13 @@ warehousingOutboundNotificationMessage.receivers=TMS.GLOBAL
 warehousingOutboundInstructionMessage.receivers=TMS.GLOBAL
 applicationReceiptAcknowledgementMessage.receivers=ACK.GLOBAL
 itemMessage.receivers=HOST.GLOBAL
+inventoryReportMessage.receivers=HOST.GLOBAL
 
 # Senders for each message
 itemMessage.senders=HOST.GLOBAL
+
+# Check the sender of the Message	
+wma.message.sender.system=SAP.GLOBAL
 
 #Valid values while running MUNIT isMUnit=true | #isMUnit=false (Comment # to be disabled)
 #isMUnit=false
