--- a/jda_if_wmadapter/Test_Environment/jda_if_wmadapter.properties
+++ b/jda_if_wmadapter/Test_Environment/jda_if_wmadapter.properties
@@ -192,6 +192,10 @@ itemMessage.version=GS1_JDA 2019.1.1
 # Native Message specific version in WM Integrator
 PART_INB_IFD.version=2019.1
 
+# PART_INB_IFD Message Default values
+PART_INB_IFD.default.clientId=E1200
+PART_INB_IFD.default.warehouseId=DC0001
+
 # Include Dynamic Receivers for DA Message eg: LOC.DC0001,LOC.ST001. 
 # The property can take value like DC0001,ST001 etc.
 # 	- 'NONE' means all the dynamic receivers will be removed from the message. 
@@ -215,7 +219,7 @@ inventoryReportMessage.receivers=HOST.GLOBAL
 itemMessage.senders=HOST.GLOBAL
 
 # Check the sender of the Message	
-wma.message.sender.system=SAP.GLOBAL
+wma.message.sender.system=SAP.*
 
 #Valid values while running MUNIT isMUnit=true | #isMUnit=false (Comment # to be disabled)
 #isMUnit=false
