--- a/jda_if_wmadapter/Test_Environment/jda_if_wmadapter.properties
+++ b/jda_if_wmadapter/Test_Environment/jda_if_wmadapter.properties
@@ -193,8 +193,8 @@ itemMessage.version=GS1_JDA 2019.1.1
 PART_INB_IFD.version=2019.1
 
 # PART_INB_IFD Message Default values
-PART_INB_IFD.default.clientId=E1200
-PART_INB_IFD.default.warehouseId=DC0001
+PART_INB_IFD.default.clientId=----
+PART_INB_IFD.default.warehouseId=----
 
 # Include Dynamic Receivers for DA Message eg: LOC.DC0001,LOC.ST001. 
 # The property can take value like DC0001,ST001 etc.
