--- a/jda_if_wmadapter/Test_Environment/jda_if_wmadapter.properties
+++ b/jda_if_wmadapter/Test_Environment/jda_if_wmadapter.properties
@@ -194,7 +194,7 @@ PART_INB_IFD.version=2019.1
 
 # PART_INB_IFD Message Default values
 PART_INB_IFD.default.clientId=----
-PART_INB_IFD.default.warehouseId=----
+PART_INB_IFD.default.warehouseId=DC0001
 
 # Include Dynamic Receivers for DA Message eg: LOC.DC0001,LOC.ST001. 
 # The property can take value like DC0001,ST001 etc.
