--- a/jda_if_wmadapter/Test_Environment/jda_if_wmadapter.properties
+++ b/jda_if_wmadapter/Test_Environment/jda_if_wmadapter.properties
@@ -192,9 +192,9 @@ itemMessage.version=GS1_JDA 2019.1.1
 # Native Message specific version in WM Integrator
 PART_INB_IFD.version=2019.1
 
-# PART_INB_IFD Message Default values
-PART_INB_IFD.default.clientId=----
-PART_INB_IFD.default.warehouseId=DC0001
+# Default values for Non-3PL integration
+wms.default.clientId=----
+wms.default.warehouseId=----
 
 # Include Dynamic Receivers for DA Message eg: LOC.DC0001,LOC.ST001. 
 # The property can take value like DC0001,ST001 etc.
@@ -218,7 +218,7 @@ inventoryReportMessage.receivers=HOST.GLOBAL
 # Senders for each message
 itemMessage.senders=HOST.GLOBAL
 
-# Check the sender of the Message	
+# Check the sender of the Message
 wma.message.sender.system=SAP.*
 
 #Valid values while running MUNIT isMUnit=true | #isMUnit=false (Comment # to be disabled)
