--- a/jda_if_wmadapter/Test_Environment/jda_if_wmadapter.properties
+++ b/jda_if_wmadapter/Test_Environment/jda_if_wmadapter.properties
@@ -1,4 +1,4 @@
-#
+`#
 # ==========================================================================
 #                      Copyright 2020, Blue Yonder Group, Inc.
 #                                All Rights Reserved
@@ -193,6 +193,9 @@ itemMessage.version=GS1_JDA 2019.1.1
 
 # Native Message specific version in WM Integrator
 PART_INB_IFD.version=2019.1
+
+# Outbound Inventory Message Version.
+outbound.message.version=GS1_JDA 2020.2.0
 
 # Default values for Non-3PL integration
 wms.default.clientId=----
