--- a/ServicesRegistry/Test_Environment/resources/configuration/services/SAP.GLOBAL.yaml
+++ b/ServicesRegistry/Test_Environment/resources/configuration/services/SAP.GLOBAL.yaml
@@ -13,6 +13,6 @@
 #* //==========================================================================
 #*/
 !service-v1
-name: TMS.GLOBAL
-serviceDefinition: TMS-2020.1.0.0
+name: SAP.GLOBAL
+serviceDefinition: SAP-2020.2.0.0
 enabled: true
