--- a/jda_if_wmadapter/Test_Environment/jda_if_wmadapter.properties
+++ b/jda_if_wmadapter/Test_Environment/jda_if_wmadapter.properties
@@ -108,7 +108,7 @@ messageStore.protocol.config=MessageStore_HTTPS
 # Message Store Default Values 
 # Outbound Native default values
 message.outbound.native.default.messageSender=WMS.GLOBAL
-message.outbound.native.default.messageReceiver=HOST.GLOBAL
+message.outbound.native.default.messageReceiver=HOST.GLOBAL,SAP.GLOBAL
 
 # Message Archiving
 message.archive.location=C:/wma-2020.1.0/messageArchive
@@ -213,7 +213,7 @@ inventoryOperationMessage.receivers=HOST.GLOBAL
 orderMessage.receivers=TMS.GLOBAL,HOST.GLOBAL
 transportPickUpDropOffConfirmationMessage.receivers=TMS.GLOBAL
 despatchAdviceMessage.receivers=TMS.GLOBAL
-receivingAdviceMessage.receivers=TMS.GLOBAL,HOST.GLOBAL
+receivingAdviceMessage.receivers=TMS.GLOBAL,HOST.GLOBAL,SAP.GLOBAL
 warehousingOutboundNotificationMessage.receivers=TMS.GLOBAL
 warehousingOutboundInstructionMessage.receivers=TMS.GLOBAL
 applicationReceiptAcknowledgementMessage.receivers=ACK.GLOBAL
