--- a/ServicesRegistry/Test_Environment/resources/configuration/service-definitions/SAP-2020.3.0.0.yaml
+++ b/ServicesRegistry/Test_Environment/resources/configuration/service-definitions/SAP-2020.3.0.0.yaml
@@ -191,3 +191,5 @@ outbound:
       flow: 'srs-common-outbound-bydm-message-subFlow'
     - message: 'BYDM:POSH-BULKCSV:BYDM 2020.2.0'
       flow: 'srs-common-outbound-bydm-message-subFlow'
+requests:
+- 'GS1:receivingAdviceMessage:GS1_JDA 2020.2.0'
