--- a/ServicesRegistry/Test_Environment/resources/configuration/service-definitions/SAP-2020.3.0.0.yaml
+++ b/ServicesRegistry/Test_Environment/resources/configuration/service-definitions/SAP-2020.3.0.0.yaml
@@ -12,180 +12,8 @@
 #* //
 #* //==========================================================================
 #*/
-!adapter-service-definition-v1
+!service-definition-v1
 name: SAP-2020.3.0.0
-description: List of BYDM messages (both inbound and outbound) with different versions supported by SAP Adapter
-inbound:
-  requests:
-    - message: 'BYDM:generalLedger-AR-BAPI-BAPI_ACC_DOCUMENT_POST:BYDM 2020.2.0'
-      flow: 'BYDM:generalLedgerMessage-AR-BAPI-BAPI_ACC_DOCUMENT_POST:commonSubFlow'
-    - message: 'BYDM:generalLedger-AP-BAPI-BAPI_ACC_DOCUMENT_POST:BYDM 2020.2.0'
-      flow: 'BYDM:generalLedgerMessage-AP-BAPI-BAPI_ACC_DOCUMENT_POST:commonSubFlow'
-    - message: 'BYDM:generalLedger-AP-CSV-GLT_AP:BYDM 2020.2.0'
-      flow: 'BYDM:generalLedgerMessage-AP-CSV-GLT_AP:commonSubFlow'
-    - message: 'BYDM:generalLedger-AR-CSV-GLT_AR:BYDM 2020.2.0'
-      flow: 'BYDM:generalLedgerMessage-AR-CSV-GLT_AR:commonSubFlow'
-    - message: 'BYDM:generalLedger-AR-IDOC-FIDCCP02:BYDM 2020.2.0'
-      flow: 'BYDM:generalLedgerMessage-AR-IDOC-FIDCCP02:commonSubFlow'
-    - message: 'BYDM:generalLedger-AR-IDOC-ACC_BILLING02:BYDM 2020.2.0'
-      flow: 'BYDM:generalLedgerMessage-AR-IDOC-ACC_BILLING02:commonSubFlow'
-    - message: 'BYDM:generalLedger-AR-IDOC-ORDER05:BYDM 2020.2.0'
-      flow: 'BYDM:generalLedgerMessage-AR-IDOC-ORDER05:commonSubFlow'
-    - message: 'BYDM:generalLedger-AP-IDOC-FIDCCP02:BYDM 2020.2.0'
-      flow: 'BYDM:generalLedgerMessage-AP-IDOC-FIDCCP02:commonSubFlow'
-    - message: 'BYDM:generalLedger-AP-IDOC-ACLPAY01:BYDM 2020.2.0'
-      flow: 'BYDM:generalLedgerMessage-AP-IDOC-ACLPAY01:commonSubFlow'
-    - message: 'BYDM:generalLedger-AP-IDOC-PORDCR103:BYDM 2020.2.0'
-      flow: 'BYDM:generalLedgerMessage-AP-IDOC-PORDCR103:commonSubFlow'
-    - message: 'BYDM:generalLedger-AP-IDOC-RECEIPT03:BYDM 2020.2.0'
-      flow: 'BYDM:generalLedgerMessage-AP-IDOC-RECEIPT03:commonSubFlow'
-    - message: 'BYDM:voucher-AP-CSV-ACCPOSTAPP01:BYDM 2020.2.0'
-      flow: 'BYDM:voucherMessage-AP-CSV-ACCPOSTAPP01:commonSubFlow'
-    - message: 'BYDM:voucher-AP-IDOC-ACLPAY01:BYDM 2020.2.0'
-      flow: 'BYDM:voucherMessage-AP-IDOC-ACLPAY01:commonSubFlow'
-    - message: 'BYDM:voucher-AR-CSV-ACCPOSTARP01:BYDM 2020.2.0'
-      flow: 'BYDM:voucherMessage-AR-CSV-ACCPOSTARP01:commonSubFlow'
-    - message: 'BYDM:voucher-AR-IDOC-ACC_BILLING02:BYDM 2020.2.0'
-      flow: 'BYDM:voucherMessage-AR-IDOC-ACC_BILLING02:commonSubFlow'
-    - message: 'BYDM:transportLoad:BYDM 2020.2.0'
-      flow: 'BYDM:shipmentMessage:commonSubFlow'
-    - message: 'BYDM:plannedSupply-PLAN_PURCHASE:BYDM 2020.2.0'
-      flow: 'BYDM:planPurchaseMessage:commonSubFlow'
-    - message: 'BYDM:plannedSupply-PLAN_ARRIVAL:BYDM 2020.2.0'
-      flow: 'BYDM:planArrivalMessage:commonSubFlow'
-    - message: 'BYDM:plannedSupply-PLAN_ORDER:BYDM 2020.2.0'
-      flow: 'BYDM:planOrderMessage:commonSubFlow'
-    - message: 'BYDM:plannedSupply-REC_SHIP:BYDM 2020.2.0'
-      flow: 'BYDM:recShipMessage:commonSubFlow'
-    - message: 'BYDM:plannedSupply-VEHICLE_LOAD:BYDM 2020.2.0'
-      flow: 'BYDM:vehicleLoadMessage:commonSubFlow'
-outbound:
-  responses:
-    - message: 'BYDM:IBATCH:BYDM 2020.2.0'
-      flow: 'srs-common-outbound-bydm-message-subFlow'
-    - message: 'BYDM:RESOURCE:BYDM 2020.2.0'
-      flow: 'srs-common-outbound-bydm-message-subFlow'
-    - message: 'BYDM:DMDUNIT:BYDM 2020.2.0'
-      flow: 'srs-common-outbound-bydm-message-subFlow'
-    - message: 'BYDM:DMDUNITIDOC:BYDM 2020.2.0'
-      flow: 'srs-common-outbound-bydm-message-subFlow'
-    - message: 'BYDM:EXCH:BYDM 2020.2.0'
-      flow: 'srs-common-outbound-bydm-message-subFlow'
-    - message: 'BYDM:ACOD:BYDM 2020.2.0'
-      flow: 'srs-common-outbound-bydm-message-subFlow'
-    - message: 'BYDM:PO:BYDM 2020.2.0'
-      flow: 'srs-common-outbound-bydm-message-subFlow'
-    - message: 'BYDM:APO:BYDM 2020.2.0'
-      flow: 'srs-common-outbound-bydm-message-subFlow'
-    - message: 'BYDM:PRODM:BYDM 2020.2.0'
-      flow: 'srs-common-outbound-bydm-message-subFlow'
-    - message: 'BYDM:EXCHIDOC:BYDM 2020.2.0'
-      flow: 'srs-common-outbound-bydm-message-subFlow'
-    - message: 'BYDM:BOD:BYDM 2020.2.0'
-      flow: 'srs-common-outbound-bydm-message-subFlow'
-    - message: 'BYDM:BOM:BYDM 2020.2.0'
-      flow: 'srs-common-outbound-bydm-message-subFlow'
-    - message: 'BYDM:BOMIDOC:BYDM 2020.2.0'
-      flow: 'srs-common-outbound-bydm-message-subFlow'
-    - message: 'BYDM:ITEM:BYDM 2020.2.0'
-      flow: 'srs-common-outbound-bydm-message-subFlow'
-    - message: 'BYDM:ITEMIDOC:BYDM 2020.2.0'
-      flow: 'srs-common-outbound-bydm-message-subFlow'
-    - message: 'BYDM:RETITEM:BYDM 2020.2.0'
-      flow: 'srs-common-outbound-bydm-message-subFlow'
-    - message: 'BYDM:RETITEMIDOC:BYDM 2020.2.0'
-      flow: 'srs-common-outbound-bydm-message-subFlow'
-    - message: 'BYDM:ACUSTORD:BYDM 2020.2.0'
-      flow: 'srs-common-outbound-bydm-message-subFlow'
-    - message: 'BYDM:PURCHM:BYDM 2020.2.0'
-      flow: 'srs-common-outbound-bydm-message-subFlow'
-    - message: 'BYDM:MGEVENT:BYDM 2020.2.0'
-      flow: 'srs-common-outbound-bydm-message-subFlow'
-    - message: 'BYDM:POIDOC:BYDM 2020.2.0'
-      flow: 'srs-common-outbound-bydm-message-subFlow'
-    - message: 'BYDM:TOIDOC:BYDM 2020.2.0'
-      flow: 'srs-common-outbound-bydm-message-subFlow'
-    - message: 'BYDM:VENMASPTY:BYDM 2020.2.0'
-      flow: 'srs-common-outbound-bydm-message-subFlow'
-    - message: 'BYDM:CUSMASPTY:BYDM 2020.2.0'
-      flow: 'srs-common-outbound-bydm-message-subFlow'
-    - message: 'BYDM:CUSMASLOC:BYDM 2020.2.0'
-      flow: 'srs-common-outbound-bydm-message-subFlow'
-    - message: 'BYDM:VENMASLOC:BYDM 2020.2.0'
-      flow: 'srs-common-outbound-bydm-message-subFlow'
-    - message: 'BYDM:RECEIVINGADVICE:BYDM 2020.2.0'
-      flow: 'srs-common-outbound-bydm-message-subFlow'
-    - message: 'BYDM:TMODE:BYDM 2020.2.0'
-      flow: 'srs-common-outbound-bydm-message-subFlow'
-    - message: 'BYDM:RELATION:BYDM 2020.2.0'
-      flow: 'srs-common-outbound-bydm-message-subFlow'
-    - message: 'BYDM:DFU:BYDM 2020.2.0'
-      flow: 'srs-common-outbound-bydm-message-subFlow'
-    - message: 'BYDM:PROMO:BYDM 2020.2.0'
-      flow: 'srs-common-outbound-bydm-message-subFlow'
-    - message: 'BYDM:DMDGROUP:BYDM 2020.2.0'
-      flow: 'srs-common-outbound-bydm-message-subFlow'
-    - message: 'BYDM:POSH:BYDM 2020.2.0'
-      flow: 'srs-common-outbound-bydm-message-subFlow'
-    - message: 'BYDM:SHHIS:BYDM 2020.2.0'
-      flow: 'srs-common-outbound-bydm-message-subFlow'
-    - message: 'BYDM:OCCAL:BYDM 2020.2.0'
-      flow: 'srs-common-outbound-bydm-message-subFlow'      
-    - message: 'BYDM:UOM:BYDM 2020.2.0'
-      flow: 'srs-common-outbound-bydm-message-subFlow'      
-    - message: 'BYDM:CUSMASPTYIDOC:BYDM 2020.2.0'
-      flow: 'srs-common-outbound-bydm-message-subFlow'
-    - message: 'BYDM:VENMASPTYIDOC:BYDM 2020.2.0'
-      flow: 'srs-common-outbound-bydm-message-subFlow'
-    - message: 'BYDM:VLL:BYDM 2020.2.0'
-      flow: 'srs-common-outbound-bydm-message-subFlow'
-    - message: 'BYDM:AVLL:BYDM 2020.2.0'
-      flow: 'srs-common-outbound-bydm-message-subFlow'
-    - message: 'BYDM:DELIVERY:BYDM 2020.2.0'
-      flow: 'srs-common-outbound-bydm-message-subFlow'
-    - message: 'BYDM:PR:BYDM 2020.2.0'
-      flow: 'srs-common-outbound-bydm-message-subFlow'
-    - message: 'BYDM:RETLOC:BYDM 2020.2.0'
-      flow: 'srs-common-outbound-bydm-message-subFlow'
-    - message: 'BYDM:PRODHIER:BYDM 2020.2.0'
-      flow: 'srs-common-outbound-bydm-message-subFlow'
-    - message: 'BYDM:CUSTORD:BYDM 2020.2.0'
-      flow: 'srs-common-outbound-bydm-message-subFlow'
-    - message: 'BYDM:CUSTORDIDOC:BYDM 2020.2.0'
-      flow: 'srs-common-outbound-bydm-message-subFlow'
-    - message: 'BYDM:TPSLOCIDOC:BYDM 2020.2.0'
-      flow: 'srs-common-outbound-bydm-message-subFlow'
-    - message: 'BYDM:FIRMPLANNEDORDER:BYDM 2020.2.0'
-      flow: 'srs-common-outbound-bydm-message-subFlow'   
-    - message: 'BYDM:VENMASLOCIDOC:BYDM 2020.2.0'
-      flow: 'srs-common-outbound-bydm-message-subFlow'
-    - message: 'BYDM:SO:BYDM 2020.2.0'
-      flow: 'srs-common-outbound-bydm-message-subFlow'
-    - message: 'BYDM:SKUPARAMIDOC:BYDM 2020.2.0'
-      flow: 'srs-common-outbound-bydm-message-subFlow'
-    - message: 'BYDM:TRANSPORTCHAIN:BYDM 2020.2.0'
-      flow: 'srs-common-outbound-bydm-message-subFlow'
-    - message: 'BYDM:DFUPRICE:BYDM 2020.2.0'
-      flow: 'srs-common-outbound-bydm-message-subFlow'
-    - message: 'BYDM:SKUPARAM:BYDM 2020.2.0'
-      flow: 'srs-common-outbound-bydm-message-subFlow'
-    - message: 'BYDM:CUSMASLOCIDOC:BYDM 2020.2.0'
-      flow: 'srs-common-outbound-bydm-message-subFlow'   
-    - message: 'BYDM:OPNHR:BYDM 2020.2.0'
-      flow: 'srs-common-outbound-bydm-message-subFlow'
-    - message: 'BYDM:SCHEDULEDRECEIPTS:BYDM 2020.2.0'
-      flow: 'srs-common-outbound-bydm-message-subFlow'
-    - message: 'BYDM:LOC:BYDM 2020.2.0'
-      flow: 'srs-common-outbound-bydm-message-subFlow'
-    - message: 'BYDM:ONHAND:BYDM 2020.2.0'
-      flow: 'srs-common-outbound-bydm-message-subFlow'
-    - message: 'BYDM:SO-BULKCSV:BYDM 2020.2.0'
-      flow: 'srs-common-outbound-bydm-message-subFlow'
-    - message: 'BYDM:SHHIS-BULKCSV:BYDM 2020.2.0'
-      flow: 'srs-common-outbound-bydm-message-subFlow'
-    - message: 'BYDM:ONHAND-BULKCSV:BYDM 2020.2.0'
-      flow: 'srs-common-outbound-bydm-message-subFlow'
-    - message: 'BYDM:DFUPRICE-BULKCSV:BYDM 2020.2.0'
-      flow: 'srs-common-outbound-bydm-message-subFlow'
-    - message: 'BYDM:POSH-BULKCSV:BYDM 2020.2.0'
-      flow: 'srs-common-outbound-bydm-message-subFlow'
+description: SAP adapter - request details wrt SAP adapter
+requests:
+- 'GS1:receivingAdviceMessage:GS1_JDA 2020.2.0'
