--- a/jda_if_wmadapter/Test_Environment/jda_if_wmadapter.properties
+++ b/jda_if_wmadapter/Test_Environment/jda_if_wmadapter.properties
@@ -57,7 +57,7 @@ jms.queue.wma.wmiN=WMA-WMIN
 srs.hostName=in2npdvdcssv07.dev.corp.local
 srs.port=9820
 srs.service.name=WMA
-srs.localModeEnable=false
+srs.localModeEnable=true
 srs.basePath=srs/api/v1
 srs.clientId=WMA
 srs.clientSecret=WMA
