--- a/jda_if_wmadapter/Test_Environment/jda_if_wmadapter.properties
+++ b/jda_if_wmadapter/Test_Environment/jda_if_wmadapter.properties
@@ -54,7 +54,7 @@ jms.queue.wmi.wma=WMS-WMA
 jms.queue.wma.wmiN=WMA-WMIN
 
 # SRS Versioning Properties
-srs.hostName=in2npdvdcssv07.dev.corp.local
+srs.hostName=localhost
 srs.port=9820
 srs.service.name=WMA
 srs.localModeEnable=true
