--- a/jda_if_wmadapter/Test_Environment/jda_if_wmadapter.properties
+++ b/jda_if_wmadapter/Test_Environment/jda_if_wmadapter.properties
@@ -162,7 +162,7 @@ warehousingOutboundInstructionMessage.model=#[['GS1_JDA 2020.1.0','GS1_JDA 2019.
 warehousingOutboundNotificationMessage.model=#[['GS1_JDA 2020.1.0','GS1_JDA 2019.1.1','GS1_JDA 2017.2.0']]
 transportPickUpDropOffRequestMessage.model=#[['GS1_JDA 2017.2.0']]
 transportPickUpDropOffConfirmationMessage.model=#[['GS1_JDA 2017.2.0']]
-locationMessage.model=#[['GS1_JDA 2017.2.0']]
+locationMessage.model=#[['GS1_JDA 2020.2.0','GS1_JDA 2017.2.0']]
 partyMessage.model=#[['GS1_JDA 2017.2.0']]
 applicationReceiptAcknowledgementMessage.model=#[['GS1_JDA 2020.1.0','GS1_JDA 2019.1.0']]
 itemMessage.model=#[['GS1_JDA 2019.1.0','GS1_JDA 2019.1.1','GS1_JDA 2020.2.0']]
