--- a/jda_if_wmadapter/Test_Environment/jda_if_wmadapter.properties
+++ b/jda_if_wmadapter/Test_Environment/jda_if_wmadapter.properties
@@ -144,12 +144,12 @@ eframework.errorReport.payload.lines.size=2000
 
 # This property is used to 
 #  - Generate Receipt Ack for Inbound/Outbound message indicating that the WMA Received the message.
-generateReceipt=BOTH
+generateReceipt=NONE
 
 # This property is used to 
 #  - Generate Error Ack for Inbound message.
 #  - Generate Success/Error ack for the Outbound message.
-generateAcceptOrError=BOTH
+generateAcceptOrError=NONE
 
 # Outbound Native to GS1 Conversion List
 outbound.request.native.gs1.list=PART_OUB_IFD,INVENTORY_RECEIPT_IFD,REVERSE_RECEIPT_IFD,INVENTORY_ADJUST,INVENTORY_ATTR_ADJUST,INVENTORY_STATUS_CHANGE_IFD,INVENTORY_CONSIGNMENT,TL_LPN_HOLD_HOST,BLIND_RECEIVING,INVENTORY_RECONCILIATION_IFD
