--- a/jda_if_wmadapter/Test_Environment/jda_if_wmadapter.properties
+++ b/jda_if_wmadapter/Test_Environment/jda_if_wmadapter.properties
@@ -144,19 +144,19 @@ eframework.errorReport.payload.lines.size=2000
 
 # This property is used to 
 #  - Generate Receipt Ack for Inbound/Outbound message indicating that the WMA Received the message.
-generateReceipt=NONE
+generateReceipt=BOTH
 
 # This property is used to 
 #  - Generate Error Ack for Inbound message.
 #  - Generate Success/Error ack for the Outbound message.
-generateAcceptOrError=NONE
+generateAcceptOrError=BOTH
 
 # Outbound Native to GS1 Conversion List
 outbound.request.native.gs1.list=PART_OUB_IFD,INVENTORY_RECEIPT_IFD,REVERSE_RECEIPT_IFD,INVENTORY_ADJUST,INVENTORY_ATTR_ADJUST,INVENTORY_STATUS_CHANGE_IFD,INVENTORY_CONSIGNMENT,TL_LPN_HOLD_HOST,BLIND_RECEIVING,INVENTORY_RECONCILIATION_IFD
 
 # GS1 Message Models
 inventoryOperationMessage.model=#[['GS1_JDA 2020.2.0','GS1_JDA 2020.1.0']]
-orderMessage.model=#[['GS1_JDA 2020.2.0','GS1_JDA 2019.1.0','GS1_JDA 2017.2.0']]
+orderMessage.model=#[['GS1_JDA 2020.2.0','GS1_JDA 2019.1.0','GS1_JDA 2017.2.0','GS1_JDA 2020.1.0','GS1_JDA 2020.3.0']]
 transportLoadMessage.model=#[['GS1_JDA 2019.1.1','GS1_JDA 2019.1.0','GS1_JDA 2017.2.0']]
 despatchAdviceMessage.model=#[['GS1_JDA 2020.1.0','GS1_JDA 2019.1.1','GS1_JDA 2019.1.0','GS1_JDA 2017.2.0']]
 receivingAdviceMessage.model=#[['GS1_JDA 2020.2.0','GS1_JDA 2020.1.0','GS1_JDA 2019.1.1','GS1_JDA 2017.2.0','GS1_JDA 2019.1.0']]
@@ -167,7 +167,7 @@ transportPickUpDropOffConfirmationMessage.model=#[['GS1_JDA 2017.2.0']]
 locationMessage.model=#[['GS1_JDA 2020.3.0','GS1_JDA 2020.2.0','GS1_JDA 2017.2.0']]
 partyMessage.model=#[['GS1_JDA 2017.2.0']]
 applicationReceiptAcknowledgementMessage.model=#[['GS1_JDA 2020.1.0','GS1_JDA 2019.1.0']]
-itemMessage.model=#[['GS1_JDA 2019.1.0','GS1_JDA 2019.1.1','GS1_JDA 2020.2.0']]
+itemMessage.model=#[['GS1_JDA 2019.1.0','GS1_JDA 2019.1.1','GS1_JDA 2020.2.0','GS1_JDA 2020.3.0']]
 nativeMessage.model=#[['GS1_JDA 2019.1.1']]
 inventoryReportMessage.model=#[['GS1_JDA 2020.2.0','GS1_JDA 2020.1.0']]
 # bom Message of version 2020.2.0 for alshaya is getting validated against 2020.3.0 model jar file. For 2020.2.0 model jar, it will fail in validation for bom message
