--- a/jda_if_wmadapter/Test_Environment/jda_if_wmadapter.properties
+++ b/jda_if_wmadapter/Test_Environment/jda_if_wmadapter.properties
@@ -159,7 +159,7 @@ inventoryOperationMessage.model=#[['GS1_JDA 2020.2.0','GS1_JDA 2020.1.0']]
 orderMessage.model=#[['GS1_JDA 2020.2.0','GS1_JDA 2019.1.0','GS1_JDA 2017.2.0','GS1_JDA 2020.1.0','GS1_JDA 2020.3.0']]
 transportLoadMessage.model=#[['GS1_JDA 2019.1.1','GS1_JDA 2019.1.0','GS1_JDA 2017.2.0']]
 despatchAdviceMessage.model=#[['GS1_JDA 2020.1.0','GS1_JDA 2019.1.1','GS1_JDA 2019.1.0','GS1_JDA 2017.2.0']]
-receivingAdviceMessage.model=#[['GS1_JDA 2020.2.0','GS1_JDA 2020.1.0','GS1_JDA 2019.1.1','GS1_JDA 2017.2.0','GS1_JDA 2019.1.0']]
+receivingAdviceMessage.model=#[['GS1_JDA 2020.2.0','GS1_JDA 2020.1.0','GS1_JDA 2019.1.1','GS1_JDA 2017.2.0','GS1_JDA 2019.1.0','GS1_JDA 2020.3.0.2']]
 warehousingOutboundInstructionMessage.model=#[['GS1_JDA 2020.1.0','GS1_JDA 2019.1.1','GS1_JDA 2019.1.0','GS1_JDA 2017.2.0']]
 warehousingOutboundNotificationMessage.model=#[['GS1_JDA 2020.1.0','GS1_JDA 2019.1.1','GS1_JDA 2017.2.0']]
 transportPickUpDropOffRequestMessage.model=#[['GS1_JDA 2017.2.0']]
@@ -198,6 +198,12 @@ PART_INB_IFD.version=2019.1
 
 # Outbound Inventory Message Version.
 outbound.message.version=GS1_JDA 2020.2.0
+
+# Outbound Order update Message Version For WMA
+# This is being used while processing the order update message from WM 
+# and Publishing the processed message to the end-point which supports BYDM format. 
+outbound.message.transferOrder.version=GS1_JDA 2020.1.0
+outbound.message.orderRelease.version=GS1_JDA 2020.3.0
 
 # Default values for Non-3PL integration
 wms.default.clientId=----
