--- a/jda_if_wmadapter/Test_Environment/jda_if_wmadapter.properties
+++ b/jda_if_wmadapter/Test_Environment/jda_if_wmadapter.properties
@@ -156,10 +156,10 @@ outbound.request.native.gs1.list=PART_OUB_IFD,INVENTORY_RECEIPT_IFD,REVERSE_RECE
 
 # GS1 Message Models
 inventoryOperationMessage.model=#[['GS1_JDA 2020.2.0','GS1_JDA 2020.1.0']]
-orderMessage.model=#[['GS1_JDA 2020.2.0','GS1_JDA 2019.1.0','GS1_JDA 2017.2.0','GS1_JDA 2020.1.0','GS1_JDA 2020.3.0']]
-transportLoadMessage.model=#[['GS1_JDA 2019.1.1','GS1_JDA 2019.1.0','GS1_JDA 2017.2.0']]
-despatchAdviceMessage.model=#[['GS1_JDA 2020.1.0','GS1_JDA 2019.1.1','GS1_JDA 2019.1.0','GS1_JDA 2017.2.0']]
-receivingAdviceMessage.model=#[['GS1_JDA 2020.2.0','GS1_JDA 2020.1.0','GS1_JDA 2019.1.1','GS1_JDA 2017.2.0','GS1_JDA 2019.1.0','GS1_JDA 2020.3.0.2']]
+orderMessage.model=#[['GS1_JDA 2020.3.0','GS1_JDA 2020.2.0','GS1_JDA 2020.1.0','GS1_JDA 2019.1.0','GS1_JDA 2017.2.0']]
+transportLoadMessage.model=#[['GS1_JDA 2020.1.0','GS1_JDA 2019.1.1','GS1_JDA 2019.1.0','GS1_JDA 2017.2.0']]
+despatchAdviceMessage.model=#[['GS1_JDA 2020.3.0.2','GS1_JDA 2020.1.0','GS1_JDA 2019.1.1','GS1_JDA 2019.1.0','GS1_JDA 2017.2.0']]
+receivingAdviceMessage.model=#[['GS1_JDA 2020.2.0','GS1_JDA 2020.1.0','GS1_JDA 2019.1.1','GS1_JDA 2017.2.0','GS1_JDA 2019.1.0']]
 warehousingOutboundInstructionMessage.model=#[['GS1_JDA 2020.1.0','GS1_JDA 2019.1.1','GS1_JDA 2019.1.0','GS1_JDA 2017.2.0']]
 warehousingOutboundNotificationMessage.model=#[['GS1_JDA 2020.1.0','GS1_JDA 2019.1.1','GS1_JDA 2017.2.0']]
 transportPickUpDropOffRequestMessage.model=#[['GS1_JDA 2017.2.0']]
@@ -167,7 +167,7 @@ transportPickUpDropOffConfirmationMessage.model=#[['GS1_JDA 2017.2.0']]
 locationMessage.model=#[['GS1_JDA 2020.3.0','GS1_JDA 2020.2.0','GS1_JDA 2017.2.0']]
 partyMessage.model=#[['GS1_JDA 2017.2.0']]
 applicationReceiptAcknowledgementMessage.model=#[['GS1_JDA 2020.1.0','GS1_JDA 2019.1.0']]
-itemMessage.model=#[['GS1_JDA 2019.1.0','GS1_JDA 2019.1.1','GS1_JDA 2020.2.0','GS1_JDA 2020.3.0']]
+itemMessage.model=#[['GS1_JDA 2020.3.0','GS1_JDA 2020.2.0','GS1_JDA 2019.1.0','GS1_JDA 2019.1.1']]
 nativeMessage.model=#[['GS1_JDA 2019.1.1']]
 inventoryReportMessage.model=#[['GS1_JDA 2020.2.0','GS1_JDA 2020.1.0']]
 # bom Message of version 2020.2.0 for alshaya is getting validated against 2020.3.0 model jar file. For 2020.2.0 model jar, it will fail in validation for bom message
