--- a/MessageBroker/Test_Environment/resources/configuration/srs-config.yaml
+++ b/MessageBroker/Test_Environment/resources/configuration/srs-config.yaml
@@ -32,6 +32,7 @@ outboundEndpoints:
     parameters:
     - name: "queue"
       value: "MB-WMA"
+  interceptorFlow: interceptorMultipleDestinationFilterSubFlow
 - name: SAP
   flow:
     name: jmsOutboundFlow
