--- a/MessageBroker/Test_Environment/resources/configuration/converter-config.yaml
+++ b/MessageBroker/Test_Environment/resources/configuration/converter-config.yaml
@@ -18,6 +18,6 @@
 
 - 'LOC.*:*:GS1'
 - 'TMS.GLOBAL:*:BYDM'
-- 'HOST.GLOBAL:*:GS1'
+- 'HOST.GLOBAL:*:BYDM'
 - 'SAP.GLOBAL:*:BYDM'
 - 'ACK.GLOBAL:*:GS1'
