--- a/MessageBroker/Test_Environment/MessageBroker-custom.yaml
+++ b/MessageBroker/Test_Environment/MessageBroker-custom.yaml
@@ -243,7 +243,7 @@ messageStore:
   enabled: true
   protocol:
     config: "MessageStore_HTTPS"
-  hostName: "IN2NPDVDCSSV07.dev.corp.local"
+  hostName: "IN2NPDVDCSSV07"
   port: "9830"
   storeBasePath: "/messagestore/api/v3"
   serviceName: "MB-GLOBAL"
