--- a/jda_if_wmadapter/Test_Environment/jda_if_wmadapter.properties
+++ b/jda_if_wmadapter/Test_Environment/jda_if_wmadapter.properties
@@ -165,8 +165,8 @@ warehousingOutboundNotificationMessage.model=#[['GS1_JDA 2020.1.0','GS1_JDA 2019
 transportPickUpDropOffRequestMessage.model=#[['GS1_JDA 2017.2.0']]
 transportPickUpDropOffConfirmationMessage.model=#[['GS1_JDA 2017.2.0']]
 locationMessage.model=#[['GS1_JDA 2020.3.0','GS1_JDA 2020.2.0','GS1_JDA 2017.2.0']]
-partyMessage.model=#[['GS1_JDA 2017.2.0']]
-applicationReceiptAcknowledgementMessage.model=#[['GS1_JDA 2020.1.0','GS1_JDA 2019.1.0']]
+partyMessage.model=#[['GS1_JDA 2020.3.0','GS1_JDA 2017.2.0']]
+applicationReceiptAcknowledgementMessage.model=#[['GS1_JDA 2020.3.0','GS1_JDA 2020.2.0','GS1_JDA 2020.1.0','GS1_JDA 2019.1.0']]
 itemMessage.model=#[['GS1_JDA 2020.3.0','GS1_JDA 2020.2.0','GS1_JDA 2019.1.0','GS1_JDA 2019.1.1']]
 nativeMessage.model=#[['GS1_JDA 2019.1.1']]
 inventoryReportMessage.model=#[['GS1_JDA 2020.2.0','GS1_JDA 2020.1.0']]
