--- a/MessageBroker/Test_Environment/MessageBroker-custom.yaml
+++ b/MessageBroker/Test_Environment/MessageBroker-custom.yaml
@@ -125,7 +125,7 @@ ftpInbound:
 
 jmsInbound:
   queue:
-    name: MB_INBOUND
+    name: HOST-MB
     brokerURL: "tcp://in2npdvdcssv07:61616"
     user: "admin"
     maxConnections: 30
