--- a/jda_if_wmadapter/Test_Environment/jda_if_wmadapter.properties
+++ b/jda_if_wmadapter/Test_Environment/jda_if_wmadapter.properties
@@ -1,4 +1,4 @@
-`#
+#
 # ==========================================================================
 #                      Copyright 2020, Blue Yonder Group, Inc.
 #                                All Rights Reserved
@@ -171,7 +171,7 @@ itemMessage.model=#[['GS1_JDA 2020.3.0','GS1_JDA 2020.2.0','GS1_JDA 2019.1.0','G
 nativeMessage.model=#[['GS1_JDA 2019.1.1']]
 inventoryReportMessage.model=#[['GS1_JDA 2020.2.0','GS1_JDA 2020.1.0']]
 # bom Message of version 2020.2.0 for alshaya is getting validated against 2020.3.0 model jar file. For 2020.2.0 model jar, it will fail in validation for bom message
-billOfMaterialMessage.model=#[['GS1_JDA 2020.3.0']]
+#billOfMaterialMessage.model=#[['GS1_JDA 2020.3.0']]
 
 # Code List Validation: IGNORE | WARNING | ERROR
 gs1.codeListValidation=WARNING
