--- a/jda_if_wmadapter/Test_Environment/jda_if_wmadapter.properties
+++ b/jda_if_wmadapter/Test_Environment/jda_if_wmadapter.properties
@@ -19,8 +19,8 @@
 # count = n  (retry n number of times)
 
 # Message Broker and WMA queue configurations
-mbJmsComponent.queue.brokerURL=failover:(tcp://in2npdvstg02.dev.corp.local:61616)?maxReconnectAttempts=0
-#mbJmsComponent.queue.brokerURL=failover:(tcp://in2npdvdcssv07.dev.corp.local:61616)?maxReconnectAttempts=0
+#mbJmsComponent.queue.brokerURL=failover:(tcp://in2npdvstg02.dev.corp.local:61616)?maxReconnectAttempts=0
+mbJmsComponent.queue.brokerURL=failover:(tcp://in2npdvdcssv07.dev.corp.local:61616)?maxReconnectAttempts=0
 mbJmsComponent.queue.user=admin
 mbJmsComponent.queue.maxConnections=30
 mbJmsComponent.queue.concurrentConsumers=30
@@ -31,8 +31,8 @@ mbJmsComponent.queue.maxRedelivery=0
 
 # WMA and WM Integrator queue configurations
 
-wmsComponent.queue.brokerURL=failover:(tcp://in2npdvstg02.dev.corp.local:61616)?maxReconnectAttempts=0
-#wmsComponent.queue.brokerURL=failover:(tcp://in2npdvdcssv07.dev.corp.local:61616)?maxReconnectAttempts=0
+#wmsComponent.queue.brokerURL=failover:(tcp://in2npdvstg02.dev.corp.local:61616)?maxReconnectAttempts=0
+wmsComponent.queue.brokerURL=failover:(tcp://in2npdvdcssv07.dev.corp.local:61616)?maxReconnectAttempts=0
 wmsComponent.queue.user=admin
 wmsComponent.queue.maxConnections=30
 wmsComponent.queue.concurrentConsumers=30
