--- a/jda_if_wmadapter/Test_Environment/jda_if_wmadapter.properties
+++ b/jda_if_wmadapter/Test_Environment/jda_if_wmadapter.properties
@@ -237,7 +237,7 @@ inventoryReportMessage.receivers=HOST.GLOBAL
 itemMessage.senders=HOST.GLOBAL
 
 # Check the sender of the Message
-wma.message.sender.system.sap=SAP.*
+wma.message.sender.system.sap=SAP
 
 #Valid values while running MUNIT isMUnit=true | #isMUnit=false (Comment # to be disabled)
 #isMUnit=false
