--- a/jda_if_wmadapter/Test_Environment/jda_if_wmadapter.properties
+++ b/jda_if_wmadapter/Test_Environment/jda_if_wmadapter.properties
@@ -47,7 +47,7 @@ jms.outbound.endpoint.type=queue
 # Queue names for sending and receiving of messages
 # Message Broker and WMA
 jms.queue.mb.in=MB-WMA
-jms.queue.mb.out=WMA-MB
+jms.queue.mb.out=MB_INBOUND
 jms.queue.mb.tpb.in=TPB-WMA
 
 # WMA and WM Integrator
