--- a/jda_if_wmadapter/Test_Environment/jda_if_wmadapter.properties
+++ b/jda_if_wmadapter/Test_Environment/jda_if_wmadapter.properties
@@ -236,6 +236,10 @@ inventoryReportMessage.receivers=HOST.GLOBAL
 # Senders for each message
 itemMessage.senders=HOST.GLOBAL
 
+# Default warehouseId for Outbound Messages from WMS to WMA
+# Default warehouseId for InventoryReceipt to ReceivingAdvice
+inventoryReceipt.default.warehouseId=DC1003
+
 # Check the sender of the Message
 wma.message.sender.system.sap=SAP
 
