--- a/jda_if_wmadapter/Test_Environment/jda_if_wmadapter.properties
+++ b/jda_if_wmadapter/Test_Environment/jda_if_wmadapter.properties
@@ -51,9 +51,9 @@ jms.queue.mb.out=MB_INBOUND
 jms.queue.mb.tpb.in=TPB-WMA
 
 # WMA and WM Integrator
-jms.queue.wma.wmi=WMA-WMS
+jms.queue.wma.wmi=WMA-WMS_custom
 jms.queue.wmi.wma=WMS-WMA
-jms.queue.wma.wmiN=WMA-WMIN
+jms.queue.wma.wmiN=WMA-WMIN_custom
 
 # SRS Versioning Properties
 srs.hostName=localhost
