--- a/MessageStore/Test_Environment/MessageStore-secure.yaml
+++ b/MessageStore/Test_Environment/MessageStore-secure.yaml
@@ -1,6 +1,6 @@
 MSDatabase:
-  user-secure: "SSV07MS"
-  password-secure: "SSV07MS"
+  user-secure: "SSV07MS_NEW"
+  password-secure: "SSV07MS_NEW"
 
 
 server:
