--- a/jda_if_wmadapter/Test_Environment/jda_if_wmadapter.properties
+++ b/jda_if_wmadapter/Test_Environment/jda_if_wmadapter.properties
@@ -243,6 +243,9 @@ inventoryReceipt.default.warehouseId=DC1003
 # Check the sender of the Message
 wma.message.sender.system.sap=SAP
 
+# Default PH Number for Order Message
+wma.orderMessage.phnnum=800-447-0573
+
 #Valid values while running MUNIT isMUnit=true | #isMUnit=false (Comment # to be disabled)
 #isMUnit=false
 
