--- a/jda_if_wmadapter/Test_Environment/jda_if_wmadapter.properties
+++ b/jda_if_wmadapter/Test_Environment/jda_if_wmadapter.properties
@@ -225,7 +225,7 @@ despatchAdvice.includedynamic.receivers=ALL
 inventoryOperationMessage.receivers=HOST.GLOBAL
 orderMessage.receivers=TMS.GLOBAL,HOST.GLOBAL
 transportPickUpDropOffConfirmationMessage.receivers=TMS.GLOBAL
-despatchAdviceMessage.receivers=TMS.GLOBAL
+despatchAdviceMessage.receivers=SAP.GLOBAL
 receivingAdviceMessage.receivers=TMS.GLOBAL,HOST.GLOBAL
 warehousingOutboundNotificationMessage.receivers=TMS.GLOBAL
 warehousingOutboundInstructionMessage.receivers=TMS.GLOBAL
